--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "@types/node": "^25.2.0",
-    "gh-pages": "^6.3.0"
+    "eslint-config-prettier": "10.1.8",
+    "gh-pages": "^6.3.0",
+    "prettier": "3.8.1",
+    "sass": "^1.97.3"
   }
 }
