--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint": "^9.39.2",
     "nuxt": "^4.3.0",
     "vue": "^3.5.27",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vuetify-nuxt-module": "^0.19.5"
   },
   "devDependencies": {
     "@types/node": "^25.2.0",
